metadata/force-app/main/default/objects/CustomName_tZZgy__c/CustomName_tZZgy__c.object-meta.xml
<CustomObject>
    <description>Description_cQjRE</description>
    <label>CustomLabel_OhbYG</label>
    <nameField>
        <label>CustomLabel_OhbYG</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_OhbYGs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>