metadata/force-app/main/default/objects/CustomName_tZZgy__c/fields/CustomField_TntxS__c.field-meta.xml
<CustomField>
    <fullName>CustomField_TntxS__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldUkZIg</label>
    <length>255</length>
    <type>Text</type>
</CustomField>