metadata/force-app/main/default/objects/CustomName_tZZgy__c/fields/CustomField_xkRGX__c.field-meta.xml
<CustomField>
    <fullName>CustomField_xkRGX__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldstqvP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>